--- a/minimum price .html
+++ b/minimum price .html
@@ -37,12 +37,12 @@
 
 <table class="table table-striped">
     <tr  class="bg-info">
-        <th data-column="name" data-order="desc">s.n &#9650 &#9660</th>
-        <th data-column="age" data-order="desc">coffee_type &#9650 &#9660</th>
-		<th >export_type </th>
-        <th >grade </th>
-		<th >PROCESSING_TYPE </th>
-		<th data-column="STAN" data-order="desc">STAN.PRICE_USD/LB &#9650 &#9660</th>
+        <th data-column="name" data-order="desc">S.n &#9650 &#9660</th>
+        <th data-column="age" data-order="desc">Coffee type &#9650 &#9660</th>
+		<th >Export type </th>
+        <th >Grade </th>
+		<th >Processing type </th>
+		<th data-column="STAN" data-order="desc">Stan.price USD/LB &#9650 &#9660</th>
     </tr>
 
     <tbody id="myTable">
