--- a/pricenav.html
+++ b/pricenav.html
@@ -1,6 +1,7 @@
 <style>
 body{
-background:#29140f;
+background:url(3.jpg);
+
 
 
 
@@ -116,12 +117,12 @@ dispaly:flex;
    
 }
 .c{
-width: 297px;
+    width: 297px;
     font-family: sans-serif;
     text-align: center;
     color: #29140f;
     font-size: 22px;
-    background-color: #fff;
+    background-color:#light gray;
     margin: 2px;
     padding: 8px;
 	border:none;
